--- a/web/package.json
+++ b/web/package.json
@@ -48,6 +48,12 @@
   },
   "devDependencies": {
     "eslint-plugin-react": "^7.20.0",
-    "gts": "^2.0.2"
+    "gts": "^2.0.2",
+    "husky": "^4.2.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "yarn lint"
+    }
   }
 }
