--- a/.gcloudignore
+++ b/.gcloudignore
@@ -11,7 +11,7 @@
 # from your .gitignore file, remove the corresponding line
 # below:
 .git
-.gitignore
+server/.gitignore
 
 # Node.js dependencies:
-node_modules/
+server/node_modules/
