--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@babel/cli": "^7.10.1",
     "@babel/core": "^7.10.2",
+    "gts": "^2.0.2",
     "nodemon": "^2.0.4"
   }
 }
