--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "repository": "git@github.com:googleinterns/gpay-group-buy.git",
   "author": "Karen Frilya Celine <karenfrilya@google.com>",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "scripts": {
     "start": "nodemon src/index.js",
     "lint": "gts check",
