--- a/web/package.json
+++ b/web/package.json
@@ -27,9 +27,9 @@
     "clean": "gts clean",
     "compile": "tsc",
     "fix": "gts fix",
-    "prepare": "yarn run compile",
-    "pretest": "yarn run compile",
-    "posttest": "yarn run check"
+    "prepare": "yarn compile",
+    "pretest": "yarn compile",
+    "posttest": "yarn lint"
   },
   "eslintConfig": {
     "extends": "react-app"
