--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,10 @@
   "devDependencies": {
     "@babel/cli": "^7.10.1",
     "@babel/core": "^7.10.2",
+    "@types/node": "^13.11.1",
     "gts": "^2.0.2",
     "nodemon": "^2.0.4",
-    "typescript": "^3.8.3",
-    "@types/node": "^13.11.1"
+    "prettier": "^2.0.5",
+    "typescript": "^3.8.3"
   }
 }
