edit markdown syntax errors in README.md and remove email from package.json

--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "repository": "git@github.com:googleinterns/gpay-group-buy.git",
-  "author": "Karen Frilya Celine <karenfrilya@google.com>",
+  "author": "Karen Frilya Celine",
   "license": "Apache-2.0",
   "scripts": {
     "start": "nodemon src/index.js",
