Add feather icons dep

--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "muicss": "^0.10.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-feather": "^2.0.8",
     "react-scripts": "3.4.1",
     "typescript": "~3.7.2"
   },
