--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -11,5 +11,11 @@
   "rules": {
     // Permits comparing to null with "==" to check for null or undefined
     "eqeqeq": [2, "allow-null"]
+  },
+  "settings": {
+    "react": {
+      "pragma": "React",
+      "version": "detect"
+    }
   }
 }
