Enable absolute import

--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -16,6 +16,11 @@
     "react": {
       "pragma": "React",
       "version": "detect"
+    },
+    "import/resolver": {
+      "node": {
+        "paths": ["src"]
+      }
     }
   }
 }
