--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@google-cloud/datastore": "^6.0.0",
     "@types/express": "^4.17.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "uuid-generator-ts": "^1.0.3"
   }
 }
