--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,6 @@
     "@google-cloud/datastore": "^6.0.0",
     "@types/express": "^4.17.6",
     "express": "^4.17.1",
-    "uuid-generator-ts": "^1.0.3"
+    "guid-typescript": "^1.0.9"
   }
 }
