Set up backend apis layer to handle routing of REST API request (#24)
* add yaml file for gae deployment

* add package.json file

* add babel for development

* move babel to devDependencies in package.json

* add nodemon for server development

* move node_modules and package.json to server folder since server and web are separate applications

* remove node_modules files from repo

* edit file paths in .gcloudignore after moving some files to server folder

* add .gitignore file for server folder

* add Google TypeScript Style library to enforce style guide

* change package.json scripts to standardise with web dev env

* add README.md file for server

* correct license name in server's package.json

* setup Google TypeScript Style

* update README.md file with new commands from gts

* add further details for yarn commands in README.md

* add new line at the end of .prettierrc.js file

* add link to gts in README.md

* delete src/index.ts file which was only for gts testing

* add express with typescript for routing http requests and add ts-node for typescript development

* add code for routing rest api requests

* remove '/api/v1' from the front part of api endpoints

* remove email from file-level comments

* change variable name merchantRouter to merchantsRouter, and similarly for the other routers to standardise the use of plural form

* reorder similar codes (e.g. import codes) for commits, customers, listings, merchants based on alphabetical order

* change tsconfig.json to disable interoperability between CommonJS and ES Modules

* change tsconfig.json to enable interoperability between CommonJS and ES Modules and use default imports

--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,12 @@
 {
   "name": "gpay-group-buy-server",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "repository": "git@github.com:googleinterns/gpay-group-buy.git",
   "author": "Karen Frilya Celine",
   "license": "Apache-2.0",
   "scripts": {
-    "start": "nodemon src/index.js",
+    "start": "nodemon",
     "lint": "gts check",
     "fix": "gts fix",
     "clean": "gts clean",
@@ -20,6 +20,11 @@
     "gts": "^2.0.2",
     "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
-    "typescript": "^3.9.5"
+    "ts-node": "^8.10.2",
+    "typescript": "^3.8.3"
+  },
+  "dependencies": {
+    "@types/express": "^4.17.6",
+    "express": "^4.17.1"
   }
 }
