enable absolute import

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -12,6 +12,7 @@
     "outDir": "build",
     "skipLibCheck": true,
     "strict": true,
+    "baseUrl": "./src/"
   },
   "include": [
     "src/**/*.ts",
