Add frontend basic structure (#30)
* Add muicss dep

* Add feather icons dep

* Add styled components dep

* Update eslintignore for frontend

* Set react version to default

* Add react-router-dom dep

* Add entry point to merchant and customer pages

* Remove unused css file

* Run linter

* Enable absolute import

* Modify test

* Add license headers

* Remove unused eslintignore

--- a/web/.eslintignore
+++ b/web/.eslintignore
@@ -1,4 +1,10 @@
-src/serviceWorker.js
-src/react-app-env.d.ts
+# build artifacts
+build/*
+coverage/*
+
+# data definition files
 **/*.d.ts
+
+# test misc
+test/fixtures/
 src/**/__tests__/**
