--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/node": "^13.11.1",
     "gts": "^2.0.2",
+    "husky": "^4.2.5",
     "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
     "ts-node": "^8.10.2",
@@ -26,5 +27,10 @@
   "dependencies": {
     "@types/express": "^4.17.6",
     "express": "^4.17.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "yarn lint"
+    }
   }
 }
