--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,12 @@
 {
   "name": "gpay-group-buy-server",
   "version": "1.0.0",
-  "main": "src/index.ts",
   "repository": "git@github.com:googleinterns/gpay-group-buy.git",
   "author": "Karen Frilya Celine",
   "license": "Apache-2.0",
   "scripts": {
-    "start": "nodemon",
+    "start": "node build/src/index.js",
+    "start:dev": "nodemon -r tsconfig-paths/register src/index.ts",
     "lint": "gts check",
     "fix": "gts fix",
     "clean": "gts clean",
