Add import sort rules to web folder

--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -3,6 +3,9 @@
     "./node_modules/gts/",
     "plugin:react/recommended"
   ],
+  "plugins": [
+    "import"
+  ],
   "env": {
     "browser": true,
     "jasmine": true,
@@ -10,7 +13,32 @@
   },
   "rules": {
     // Permits comparing to null with "==" to check for null or undefined
-    "eqeqeq": [2, "allow-null"]
+    "eqeqeq": [2, "allow-null"],
+    "import/order": [
+      "error",
+      {
+        "groups": [
+          "builtin",
+          "external",
+          "internal"
+        ],
+        "pathGroups": [
+          {
+            "pattern": "react",
+            "group": "external",
+            "position": "before"
+          }
+        ],
+        "pathGroupsExcludedImportTypes": [
+          "react"
+        ],
+        "newlines-between": "always",
+        "alphabetize": {
+          "order": "asc",
+          "caseInsensitive": true
+        }
+      }
+    ]
   },
   "settings": {
     "react": {
