--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -1,3 +1,25 @@
 {
-  "extends": "./node_modules/gts/"
+  "extends": [
+    "./node_modules/gts/"
+  ],
+  "plugins": [
+    "import"
+  ],
+  "rules": {
+    "import/order": [
+      "error",
+      {
+        "groups": [
+          "builtin",
+          "external",
+          "internal"
+        ],
+        "newlines-between": "always",
+        "alphabetize": {
+          "order": "asc",
+          "caseInsensitive": true
+        }
+      }
+    ]
+  }
 }
