--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@types/node": "^13.11.1",
+    "eslint-plugin-import": "^2.21.2",
     "gts": "^2.0.2",
     "husky": "^4.2.5",
     "nodemon": "^2.0.4",
