--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "license": "Apache-2.0",
   "scripts": {
     "start": "node build/src/index.js",
-    "start:dev": "nodemon -r tsconfig-paths/register src/index.ts",
+    "start:dev": "nodemon src/index.ts",
     "lint": "gts check",
     "fix": "gts fix",
     "clean": "gts clean",
@@ -26,8 +26,10 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@google-cloud/datastore": "^6.0.0",
     "@types/express": "^4.17.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "guid-typescript": "^1.0.9"
   },
   "husky": {
     "hooks": {
