Add ListingCard component

--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -38,7 +38,9 @@
           "caseInsensitive": true
         }
       }
-    ]
+    ],
+    // TypeScript lints this for us
+    "react/prop-types": "off"
   },
   "settings": {
     "react": {
