Fix FE app.yaml for deployment

--- a/web/app.yaml
+++ b/web/app.yaml
@@ -2,9 +2,13 @@ runtime: nodejs10
 service: default
 
 handlers:
-  - url: /
+  - url: /static
+    static_dir: build/static
+
+  - url: /(.*\.(json|ico|js|png))$
+    static_files: build/\1
+    upload: build/.*\.(json|ico|js|png)$
+
+  - url: .*
     static_files: build/index.html
     upload: build/index.html
-
-  - url: /
-    static_dir: build
