Edit according to comments

--- a/web/app.yaml
+++ b/web/app.yaml
@@ -9,6 +9,6 @@ handlers:
     static_files: build/\1
     upload: build/.*\.(json|ico|js|png)$
 
-  - url: .*
+  - url: /.*
     static_files: build/index.html
     upload: build/index.html
