--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -19,7 +19,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react",
-    "baseUrl": "./src/"
+    "baseUrl": "./src/",
+    "experimentalDecorators": true
   },
   "include": [
     "src"
