--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -19,8 +19,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react",
-    "baseUrl": "./src/",
-    "experimentalDecorators": true
+    "baseUrl": "./src/"
   },
   "include": [
     "src"
