--- a/web/app.yaml
+++ b/web/app.yaml
@@ -14,5 +14,6 @@ handlers:
     upload: build/index.html\
 
 env_variables:
+  # Replace with API key and authentication domain before deployment
   REACT_APP_API_KEY: '<API_KEY>'
   REACT_APP_AUTH_DOMAIN: '<AUTH_DOMAIN>'
