--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.0",
+    "date-fns": "^2.14.0",
     "muicss": "^0.10.2",
     "rc-progress": "^3.0.0",
     "react": "^16.13.1",
