--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@google-cloud/datastore": "^6.0.0",
     "@types/express": "^4.17.6",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "guid-typescript": "^1.0.9"
   },
