--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "@types/express": "^4.17.6",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "firebase-admin": "^8.12.1",
     "guid-typescript": "^1.0.9"
   },
   "husky": {
