--- a/web/.env.production
+++ b/web/.env.production
@@ -1,1 +1,1 @@
-REACT_APP_SERVER_URL=https://api-dot-gpay-group-buy.an.r.appspot.com/
+REACT_APP_SERVER_URL=https://api-dot-gpay-group-buy.an.r.appspot.com
