Move custom-typings/ into src/ and rename to use - instead of _

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -14,7 +14,7 @@
     "strict": true,
     "baseUrl": "./src/",
     "typeRoots": [
-      "./custom_typings"
+      "./src/custom-typings"
     ],
   },
   "include": [
