Add merchant authentication using Firebase (#64)
* Destructure express during import

* Fix lint errors

* Change export to default export in api/merchants.ts

* Add add function in datastore.ts

* Add Merchant interfaces

* Remove getAllMerchants and getMerchant from storage/merchants.ts

* Refactor addMerchant to use add function from datastore.ts

* Remove getAllMerchants and getMerchant from export

* Remove destructuring from import datastore

* Replace getAllMerchants in merchantStorage with addMerchant function

* Add body parser to express application

* Fix lint error

* Add POST /merchants endpoint to add a merchant

* Remove unused merchant operations

* Change function to arrow notation in storage/merchants.ts

* Remove unnecessary await due to implicit return in services/merchants.ts

Co-authored-by: Caryn Heng <carynheng@google.com>

* Add merchant authentication using Firebase

* Fix lint error

* Return id after inserting object to datastore

* Send id to client as Location header instead of body

* Use absolute path in Location header

* Return id after inserting object to datastore

* Send id to client as Location header instead of body

* Use absolute path in Location header

* Refactor out function getIdFromCommitResponse

* Rename uid to firebaseUid

* Add TODO comment to add checks for addMerchant

* Rename uid to firebaseUid

* Change type of req.decoded to firebase admin DecodedIdToken

* Move custom-typings/ into src/ and rename to use - instead of _

* Rename idToken to firebaseIdToken

* Rename decodedToken to decodedFirebaseIdToken

* Fix lint error

* Make missing auth header error message clearer

Co-authored-by: Caryn Heng <carynheng@google.com>

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -12,7 +12,10 @@
     "outDir": "build",
     "skipLibCheck": true,
     "strict": true,
-    "baseUrl": "./src/"
+    "baseUrl": "./src/",
+    "typeRoots": [
+      "./src/custom-typings"
+    ],
   },
   "include": [
     "src/**/*.ts",
