--- a/web/app.yaml
+++ b/web/app.yaml
@@ -12,3 +12,8 @@ handlers:
   - url: /.*
     static_files: build/index.html
     upload: build/index.html
+
+env_variables:
+  # Replace with API key and authentication domain before deployment
+  REACT_APP_API_KEY: '<API_KEY>'
+  REACT_APP_AUTH_DOMAIN: '<AUTH_DOMAIN>'
