--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.0",
     "@types/to-camel-case": "^1.0.0",
+    "firebase": "^7.15.2",
     "muicss": "^0.10.2",
     "rc-progress": "^3.0.0",
     "react": "^16.13.1",
