Add CORS to express router

--- a/server/app.yaml
+++ b/server/app.yaml
@@ -2,3 +2,4 @@ runtime: nodejs10
 service: api
 env_variables:
   SERVERL_URL: "https://api-dot-gpay-group-buy.an.r.appspot.com"
+  WEB_URL: "https://gpay-group-buy.an.r.appspot.com"
