--- a/server/package.json
+++ b/server/package.json
@@ -27,8 +27,10 @@
   },
   "dependencies": {
     "@google-cloud/datastore": "^6.0.0",
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase-admin": "^8.12.1",
     "guid-typescript": "^1.0.9"
