--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "@google-cloud/datastore": "^6.0.0",
     "@types/express": "^4.17.6",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "firebase-admin": "^8.12.1",
     "guid-typescript": "^1.0.9"
