--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "license": "Apache-2.0",
   "scripts": {
     "start": "node build/src/index.js",
-    "start:dev": "nodemon src/index.ts",
+    "start:dev": "nodemon -r dotenv/config src/index.ts",
     "lint": "gts check",
     "fix": "gts fix",
     "clean": "gts clean",
