--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,6 @@
+# These are environment variables for development in local machine.
+# Environment variables for production should be written in app.yaml.
+
 GOOGLE_CLOUD_PROJECT=gpay-group-buy
-SERVER_URL=https://api-dot-gpay-group-buy.an.r.appspot.com
+SERVER_URL=http://localhost:5000
+WEB_URL=http://localhost:3000
