--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "license": "Apache-2.0",
   "scripts": {
     "start": "node build/src/index.js",
-    "start:dev": "nodemon src/index.ts",
+    "start:dev": "nodemon -r dotenv-flow/config src/index.ts --node-env=development",
     "lint": "gts check",
     "fix": "gts fix",
     "clean": "gts clean",
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@types/node": "^13.11.1",
+    "dotenv-flow": "^3.2.0",
     "eslint-plugin-import": "^2.21.2",
     "gts": "^2.0.2",
     "husky": "^4.2.5",
