--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -1,6 +1,8 @@
 {
   "extends": [
-    "./node_modules/gts/"
+    "./node_modules/gts/",
+    "plugin:jest/recommended",
+    "plugin:jest/style"
   ],
   "plugins": [
     "import"
