Add cross-env and eslint rules

--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -23,5 +23,16 @@
         }
       }
     ]
-  }
+  },
+  "overrides": [
+    {
+      "files": [
+        "**/__tests__/**/*.+(ts|tsx|js)",
+        "**/?(*.)+(spec|test).+(ts|tsx|js)"
+      ],
+      "rules": {
+        "node/no-unpublished-import": 0
+      }
+    }
+  ]
 }
