--- a/server/package.json
+++ b/server/package.json
@@ -9,8 +9,8 @@
     "start:dev": "nodemon -r dotenv-flow/config src/index.ts --node-env=development",
     "lint": "gts check",
     "fix": "gts fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "test": "cross-env NODE_ENV=test jest --forceExit",
+    "test:watch": "cross-env NODE_ENV=test jest --watch",
     "clean": "gts clean",
     "compile": "tsc",
     "prepare": "yarn run compile",
@@ -20,6 +20,8 @@
   "devDependencies": {
     "@types/jest": "^26.0.3",
     "@types/node": "^13.11.1",
+    "@types/supertest": "^2.0.10",
+    "cross-env": "^7.0.2",
     "dotenv-flow": "^3.2.0",
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-jest": "^23.17.1",
@@ -37,7 +39,6 @@
     "@google-cloud/datastore": "^6.0.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
-    "@types/supertest": "^2.0.10",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
