Setup datastore tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
+dist: xenial
+  apt:
+    packages:
+      - google-cloud-sdk
 language: node_js
 node_js: 10
 cache: yarn
@@ -8,6 +12,9 @@ matrix:
     - name: 'Backend'
       before_install:
         - cd server
+      before_script:
+        - gcloud beta emulators datastore start --no-store-on-disk &
+        - $(gcloud beta emulators datastore env-init
       script:
         - yarn lint
         - yarn test
