--- a/server/package.json
+++ b/server/package.json
@@ -39,11 +39,14 @@
     "@google-cloud/datastore": "^6.0.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
+    "@types/node-fetch": "^2.5.7",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase-admin": "^8.12.1",
-    "guid-typescript": "^1.0.9"
+    "guid-typescript": "^1.0.9",
+    "node-fetch": "^2.6.0",
+    "portfinder": "^1.0.26"
   },
   "husky": {
     "hooks": {
@@ -52,6 +55,8 @@
   },
   "jest": {
     "testEnvironment": "node",
+    "globalSetup": "<rootDir>/tests/datastore-setup.ts",
+    "globalTeardown": "<rootDir>/tests/datastore-teardown.ts",
     "coveragePathIgnorePatterns": [
       "/node_modules/"
     ],
