--- a/server/package.json
+++ b/server/package.json
@@ -2,20 +2,20 @@
   "name": "gpay-group-buy-server",
   "version": "1.0.0",
   "repository": "git@github.com:googleinterns/gpay-group-buy.git",
-  "author": "Karen Frilya Celine",
   "license": "Apache-2.0",
   "scripts": {
     "start": "node build/src/index.js",
     "start:dev": "nodemon -r dotenv-flow/config src/index.ts --node-env=development",
     "lint": "gts check",
     "fix": "gts fix",
-    "test": "cross-env NODE_ENV=test jest --forceExit",
-    "test:watch": "cross-env NODE_ENV=test jest --watch",
     "clean": "gts clean",
     "compile": "tsc",
     "prepare": "yarn run compile",
-    "pretest": "yarn run compile",
-    "posttest": "yarn run lint"
+    "pretest": "yarn run compile && $(gcloud beta emulators datastore env-init)",
+    "posttest": "yarn run lint",
+    "test": "cross-env NODE_ENV=test DATASTORE_EMULATOR_PORT=8081 jest --forceExit",
+    "test:watch": "yarn test --watch",
+    "test:emulator": "gcloud beta emulators datastore start --no-store-on-disk --host-port=localhost:8081"
   },
   "devDependencies": {
     "@types/jest": "^26.0.3",
