--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,8 @@
     "start:dev": "nodemon -r dotenv-flow/config src/index.ts --node-env=development",
     "lint": "gts check",
     "fix": "gts fix",
+    "test": "cross-env NODE_ENV=test jest --forceExit",
+    "test:watch": "cross-env NODE_ENV=test jest --watch",
     "clean": "gts clean",
     "compile": "tsc",
     "prepare": "yarn run compile",
@@ -16,13 +18,20 @@
     "posttest": "yarn run lint"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.3",
     "@types/node": "^13.11.1",
+    "@types/supertest": "^2.0.10",
+    "cross-env": "^7.0.2",
     "dotenv-flow": "^3.2.0",
     "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jest": "^23.17.1",
     "gts": "^2.0.2",
     "husky": "^4.2.5",
+    "jest": "^26.1.0",
     "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
+    "supertest": "^4.0.2",
+    "ts-jest": "^26.1.1",
     "ts-node": "^8.10.2",
     "typescript": "^3.8.3"
   },
@@ -39,6 +48,23 @@
   "husky": {
     "hooks": {
       "pre-push": "yarn lint"
+    }
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "roots": [
+      "<rootDir>/src",
+      "<rootDir>/tests"
+    ],
+    "testMatch": [
+      "**/__tests__/**/*.+(ts|tsx|js)",
+      "**/?(*.)+(spec|test).+(ts|tsx|js)"
+    ],
+    "transform": {
+      "^.+\\.(ts|tsx)$": "ts-jest"
     }
   }
 }
