Setup datastore testing (#85)
* Setup datastore tests

* Add port as a testenv var

* Update travis server before_script

* Add readme

* add google-cloud-xenial source to travis

* Remove debugging log

* Use emulator host env var instead

* Wait for emulator check

* Move datastore env-init to test from pretest

* Remove emulator port env

* Address suggestions

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
+dist: xenial
+apt:
+  packages:
+    - google-cloud-sdk
 language: node_js
 node_js: 10
 cache: yarn
@@ -6,8 +10,17 @@ install:
 matrix:
   include:
     - name: 'Backend'
+      addons:
+        apt:
+          sources:
+            - google-cloud-xenial
+          packages:
+            - google-cloud-sdk
+            - google-cloud-sdk-datastore-emulator
       before_install:
         - cd server
+      before_script:
+        - yarn test:emulator &
       script:
         - yarn lint
         - yarn test
