--- a/server/package.json
+++ b/server/package.json
@@ -2,20 +2,20 @@
   "name": "gpay-group-buy-server",
   "version": "1.0.0",
   "repository": "git@github.com:googleinterns/gpay-group-buy.git",
-  "author": "Karen Frilya Celine",
   "license": "Apache-2.0",
   "scripts": {
     "start": "node build/src/index.js",
     "start:dev": "nodemon -r dotenv-flow/config src/index.ts --node-env=development",
     "lint": "gts check",
     "fix": "gts fix",
-    "test": "cross-env NODE_ENV=test jest --forceExit",
-    "test:watch": "cross-env NODE_ENV=test jest --watch",
     "clean": "gts clean",
     "compile": "tsc",
     "prepare": "yarn run compile",
     "pretest": "yarn run compile",
-    "posttest": "yarn run lint"
+    "posttest": "yarn run lint",
+    "test": "$(gcloud beta emulators datastore env-init) && cross-env NODE_ENV=test jest --forceExit",
+    "test:watch": "yarn test --watch",
+    "test:emulator": "gcloud beta emulators datastore start --no-store-on-disk --host-port=localhost:8081"
   },
   "devDependencies": {
     "@types/jest": "^26.0.3",
@@ -39,11 +39,14 @@
     "@google-cloud/datastore": "^6.0.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
+    "@types/node-fetch": "^2.5.7",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase-admin": "^8.12.1",
-    "guid-typescript": "^1.0.9"
+    "guid-typescript": "^1.0.9",
+    "node-fetch": "^2.6.0",
+    "portfinder": "^1.0.26"
   },
   "husky": {
     "hooks": {
@@ -52,6 +55,8 @@
   },
   "jest": {
     "testEnvironment": "node",
+    "globalSetup": "<rootDir>/tests/datastore-setup.ts",
+    "globalTeardown": "<rootDir>/tests/datastore-teardown.ts",
     "coveragePathIgnorePatterns": [
       "/node_modules/"
     ],
