Add customer auth

--- a/server/app.yaml
+++ b/server/app.yaml
@@ -4,3 +4,4 @@ env_variables:
   GOOGLE_CLOUD_PROJECT: "gpay-group-buy"
   SERVERL_URL: "https://api-dot-gpay-group-buy.an.r.appspot.com"
   WEB_URL: "https://gpay-group-buy.an.r.appspot.com"
+  OAUTH_CLIENT_ID: <Secret>
