--- a/web/package.json
+++ b/web/package.json
@@ -28,6 +28,7 @@
     "react-feather": "^2.0.8",
     "react-hook-form": "^5.7.2",
     "react-hook-inview": "^4.2.0",
+    "react-number-format": "^4.4.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
