--- a/web/.env.production
+++ b/web/.env.production
@@ -1,1 +1,3 @@
 REACT_APP_SERVER_URL=https://api-dot-gpay-group-buy.an.r.appspot.com
+REACT_APP_API_KEY=<FIREBASE_API_KEY>
+REACT_APP_AUTH_DOMAIN=<FIREBASE_AUTH_DOMAIN>
