--- a/server/.env.development
+++ b/server/.env.development
@@ -4,3 +4,8 @@
 GOOGLE_CLOUD_PROJECT=gpay-group-buy
 SERVER_URL=http://localhost:5000
 WEB_URL=http://localhost:3000
+
+# Secret keys
+# Redefine these in .env.development.local with the appropriate values.
+# Secret environment variables for production should be written in app.secret.yaml.
+OAUTH_CLIENT_ID=661365338629-vmc5i8aqs33856h8mgutll7icisn7jgj.apps.googleusercontent.com
