Move secret prod env vars to app.secret.yaml

--- a/server/app.yaml
+++ b/server/app.yaml
@@ -2,6 +2,8 @@ runtime: nodejs10
 service: api
 env_variables:
   GOOGLE_CLOUD_PROJECT: "gpay-group-buy"
-  SERVERL_URL: "https://api-dot-gpay-group-buy.an.r.appspot.com"
+  SERVER_URL: "https://api-dot-gpay-group-buy.an.r.appspot.com"
   WEB_URL: "https://gpay-group-buy.an.r.appspot.com"
   OAUTH_CLIENT_ID: <Secret>
+includes:
+  - app.secret.yaml
