--- a/server/.env.development
+++ b/server/.env.development
@@ -8,4 +8,4 @@ WEB_URL=http://localhost:3000
 # Secret keys
 # Redefine these in .env.development.local with the appropriate values.
 # Secret environment variables for production should be written in app.secret.yaml.
-OAUTH_CLIENT_ID=661365338629-vmc5i8aqs33856h8mgutll7icisn7jgj.apps.googleusercontent.com
+OAUTH_CLIENT_ID=<Secret>
