Move server side env vars to local files (#145)
* Move placeholder env var out of local

* Move secret prod env vars to app.secret.yaml

* Add env var section to readme

* Fix nit

--- a/server/.env.development
+++ b/server/.env.development
@@ -4,3 +4,8 @@
 GOOGLE_CLOUD_PROJECT=gpay-group-buy
 SERVER_URL=http://localhost:5000
 WEB_URL=http://localhost:3000
+
+# Secret keys
+# Redefine these in .env.development.local with the appropriate values.
+# Secret environment variables for production should be written in app.secret.yaml.
+OAUTH_CLIENT_ID=<Secret>
