--- a/web/package.json
+++ b/web/package.json
@@ -23,11 +23,11 @@
     "muicss": "^0.10.2",
     "rc-progress": "^3.0.0",
     "react": "^16.13.1",
+    "react-device-detect": "^1.13.1",
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.8",
     "react-hook-form": "^5.7.2",
     "react-hook-inview": "^4.2.0",
-    "react-responsive": "^8.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.1",
