--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "muicss": "^0.10.2",
     "rc-progress": "^3.0.0",
     "react": "^16.13.1",
+    "react-device-detect": "^1.13.1",
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.8",
     "react-hook-form": "^5.7.2",
