--- a/server/package.json
+++ b/server/package.json
@@ -38,12 +38,14 @@
     "@google-cloud/datastore": "^6.0.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
+    "@types/google-libphonenumber": "^7.4.19",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node-fetch": "^2.5.7",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase-admin": "^8.12.1",
+    "google-libphonenumber": "^3.2.10",
     "guid-typescript": "^1.0.9",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^1.8.1",
