Modify package.json scripts (#165)
* Remove posstest linting

* Rename compile script to typecheck on client

* Update client readme

* Add typecheck to travis

* Remove posttest completely

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ matrix:
       before_install:
         - cd web
       script:
+        - yarn typecheck
         - yarn lint
         - yarn test
         - yarn build
