--- a/web/package.json
+++ b/web/package.json
@@ -41,11 +41,10 @@
     "lint:code": "gts check",
     "lint:css": "stylelint ./src/**/*.tsx",
     "clean": "gts clean",
-    "compile": "tsc",
+    "typecheck": "tsc",
     "fix": "gts fix",
-    "prepare": "yarn compile",
-    "pretest": "yarn compile",
-    "posttest": "yarn lint"
+    "prepare": "yarn typecheck",
+    "pretest": "yarn typecheck"
   },
   "eslintConfig": {
     "extends": "react-app"
