Order explore listings by earliest deadline

--- a/server/index.yaml
+++ b/server/index.yaml
@@ -18,3 +18,8 @@ indexes:
   - name: merchantId
   - name: listingStatus
   - name: deadline
+
+- kind: Listing
+  properties:
+  - name: listingStatus
+  - name: deadline
