--- a/server/package.json
+++ b/server/package.json
@@ -40,6 +40,7 @@
     "@types/express": "^4.17.6",
     "@types/google-libphonenumber": "^7.4.19",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/lodash": "^4.14.158",
     "@types/node-fetch": "^2.5.7",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -49,6 +50,7 @@
     "guid-typescript": "^1.0.9",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^1.8.1",
+    "lodash": "^4.17.19",
     "node-fetch": "^2.6.0",
     "portfinder": "^1.0.26"
   },
