Add sendMessage function

--- a/server/.env.development
+++ b/server/.env.development
@@ -9,3 +9,5 @@ WEB_URL=http://localhost:3000
 # Redefine these in .env.development.local with the appropriate values.
 # Secret environment variables for production should be written in app.secret.yaml.
 OAUTH_CLIENT_ID=<Secret>
+SERVICE_ACCOUNT_CLIENT_EMAIL=<Secret>
+SERVICE_ACCOUNT_PRIVATE_KEY=<Secret>
