--- a/server/app.yaml
+++ b/server/app.yaml
@@ -4,6 +4,7 @@ env_variables:
   GOOGLE_CLOUD_PROJECT: "gpay-group-buy"
   SERVER_URL: "https://api-dot-gpay-group-buy.an.r.appspot.com"
   WEB_URL: "https://gpay-group-buy.an.r.appspot.com"
+  SPOT_MERCHANT_ID: 14116337401048649233
   OAUTH_CLIENT_ID: <Secret>
 includes:
   - app.secret.yaml
