--- a/server/.env.development
+++ b/server/.env.development
@@ -4,6 +4,8 @@
 GOOGLE_CLOUD_PROJECT=gpay-group-buy
 SERVER_URL=http://localhost:5000
 WEB_URL=http://localhost:3000
+SPOT_MERCHANT_ID=BCR2DN6T3P5NDAKX
+SPOT_MICROAPP_ID=14116337401048649233
 
 # Secret keys
 # Redefine these in .env.development.local with the appropriate values.
