--- a/server/package.json
+++ b/server/package.json
@@ -41,6 +41,7 @@
     "@types/google-libphonenumber": "^7.4.19",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node-fetch": "^2.5.7",
+    "@types/sinon": "^9.0.4",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -51,7 +52,9 @@
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^1.8.1",
     "node-fetch": "^2.6.0",
-    "portfinder": "^1.0.26"
+    "node-mocks-http": "^1.8.1",
+    "portfinder": "^1.0.26",
+    "sinon": "^9.0.3"
   },
   "husky": {
     "hooks": {
