--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -32,8 +32,8 @@
       ],
       "rules": {
         "node/no-unpublished-import": 0,
-        // Disable because we this for TS typecasting so that we
-        // can access the helper functions in our mocks.
+        // Disable because we need this for TS typecasting so that
+        // we can access the helper functions in our mocks.
         "jest/no-mocks-import": 0
       }
     }
