Mock auth middlewares and add tests (#212)
* Add tests for customer endpoints that requires auth

* Add tests for requests with merchant auth

* Fix lint

* Add require auth test for commits

* Add require auth test for listings

* Use fake commitId for testing for auth in commits endpoints

* Reset mocks before every test

* Fix typo

* Create restorable mocks

* Fix lint

* Update mocks to follow jest standards

* Make auth tests consistent

* Address comments

--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -31,7 +31,10 @@
         "**/?(*.)+(spec|test).+(ts|tsx|js)"
       ],
       "rules": {
-        "node/no-unpublished-import": 0
+        "node/no-unpublished-import": 0,
+        // Disable because we need this for TS typecasting so that
+        // we can access the helper functions in our mocks.
+        "jest/no-mocks-import": 0
       }
     }
   ]
