Use Spot Messages API to notify customers of `commitStatus` change (#213)
* Add sendMessage function

* Add sendCompletedCommitMessage function

* Move SPOT_MERCHANT_ID and SPOT_MICROAPP_ID to env file

* Send message to notify customers when listing is successful or unsuccessful

--- a/server/.env.development
+++ b/server/.env.development
@@ -4,8 +4,12 @@
 GOOGLE_CLOUD_PROJECT=gpay-group-buy
 SERVER_URL=http://localhost:5000
 WEB_URL=http://localhost:3000
+SPOT_MERCHANT_ID=BCR2DN6T3P5NDAKX
+SPOT_MICROAPP_ID=14116337401048649233
 
 # Secret keys
 # Redefine these in .env.development.local with the appropriate values.
 # Secret environment variables for production should be written in app.secret.yaml.
 OAUTH_CLIENT_ID=<Secret>
+SERVICE_ACCOUNT_CLIENT_EMAIL=<Secret>
+SERVICE_ACCOUNT_PRIVATE_KEY=<Secret>
