Disable no-unused-vars eslint rule for _ variable

--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -8,6 +8,9 @@
     "import"
   ],
   "rules": {
+    "@typescript-eslint/no-unused-vars": [1, {
+      "varsIgnorePattern": "^_"
+    }],
     "import/order": [
       "error",
       {
